# osem_sest_smerovky

./: .gitignore  CMakeLists.txt  Makefile  arch_dat.bat  arch_src.bat
VS/: osem_sest_smerovky.sln
VS/osem/: osemsmerovky.vcxproj  osemsmerovky.vcxproj.filters
VS/sest/: sestsmerovky.vcxproj  sestsmerovky.vcxproj.filters
data/: kn.obr  kn.slo  kn.sol
data/krimi-200406/: krimi09.obr  krimi09.slo  krimi09.sol  krimi11.obr  krimi11.slo  krimi11.sol  krimi21.obr  krimi21.slo  krimi21.sol  krimi27.obr  krimi27.slo  krimi27.sol  krimi32.obr  krimi32.slo  krimi32.sol
data/krizovkar/042004/: o02.obr  o02.slo  o02.sol  o06.obr  o06.slo  o06.sol  o07.obr  o07.slo  o07.sol  o12.obr  o12.slo  o12.sol  o13.obr  o13.slo  o13.sol  o14.obr  o14.slo  o14.sol  o20.obr  o20.slo  o20.sol  o21.osm  o21.slo  o21.sol  o24.obr  o24.slo  o24.sol  o27.obr  o27.slo  o27.sol  o28.obr  o28.slo  o28.sol
data/minikrz-200309/: minik01.obr  minik01.slo  minik02.obr  minik02.slo
data/pravda_krizovky/: 20201128.obr.txt  20201128.slo.txt  20201128.sol.txt  20201205.obr.txt  20201205.slo.txt  20201205.sol.txt
data/relax/25252003/: osm04.obr  osm04.slo  osm04.sol  osm07.obr  osm07.slo  osm07.sol  osm08.obr  osm08.slo  osm08.sol  osm09.obr  osm09.slo  osm09.sol  osm10.obr  osm10.slo  osm10.sol  osm11.obr  osm11.slo  osm11.sol  osm12.obr  osm12.slo  osm12.sol  osm15.obr  osm15.slo  osm15.sol  osm16.obr  osm16.slo  osm16.sol  osm21.obr  osm21.slo  ssm06.obr  ssm06.slo  ssm06.sol
data/relax/MAG012004/: o02.obr  o02.slo  o02.sol  o05.obr  o05.slo  o05.sol  o08.obr  o08.slo  o08.sol  o18.obr  o18.slo  o27.obr  o27.slo  o31.obr  o31.slo  o31.sol  o32.obr  o32.slo  o33.obr  o33.slo  o33.sol  o37.obr  o37.slo  o37.sol  o38.obr  o38.slo  o38.sol  o40.obr  o40.slo  o40.sol  s26.slo  s26.sol  s26.ssm
data/velkysibal-200309/: vsib06.obr  vsib06.slo  vsib10.obr  vsib10.slo  vsib17.obr  vsib17.slo  vsib21.obr  vsib21.slo  vsib22.obr  vsib22.slo  vsib27.obr  vsib27.slo  vsib28.obr  vsib28.slo  vsib31.obr  vsib31.slo
doc/: user_manual-sk.texi
include/: Makefile  bmp1dul.h  bmp1dulm.h  bmp2dulm.h  cesty.h  charpath.h  chrslovo.h  find.h  findcomm.h  findsyl.h  flosm.h  flosmsyl.h  lustikrz.h  num_path.h  obrfile.h  osm_ries.h  osm_size.h  osmtop.h  pismeno.h  position.h  q_part.h  q_sect.h  search.h  slovo.h  smery.h  specchar.h  str_path.h  syllabe.h  syltop.h  table.h  topcomm.h  version.h
src/: CMakeLists.txt  Makefile  bmp1dulm.c  bmp2dulm.c  cesty.c  charpath.c  chrslovo.c  find.c  findsyl.c  flosm.c  flosmsyl.c  lustikrz.c  num_path.c  obrfile.c  osm_ries.c  osm_size.c  osmtop.c  pismeno.c  position.c  q_part.c  q_sect.c  search.c  slovo.c  smery.c  specchar.c  ss_n.c  str_path.c  syltop.c  table.c  uu_n.c  wrdlist.c
work/: alpha.c  alpha.h  chr_path.c  dynalpha.c  num_path-new.c  osm_top.c  osm_top.h  size.c  test_alpha.c
